<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.payrix.payrixsdkdemo.DemoStart"
    tools:showIn="@layout/activity_demo_start">

    <!-- Custom like tab -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tabParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:padding="3dp"
        android:background="@drawable/rounded_custom_view"
        android:orientation="horizontal">

        <!-- SandBox -->
        <androidx.cardview.widget.CardView
            android:id="@+id/sandboxBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="8dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sandboxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/sandbox"/>

        </androidx.cardview.widget.CardView>

        <!-- Live - Prod -->
        <androidx.cardview.widget.CardView
            android:id="@+id/liveProdBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            app:contentPaddingTop="8dp"
            app:contentPaddingBottom="8dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/liveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:text="@string/live_prod"/>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnAuthenticate"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goAuthenticate"
        android:text="@string/authenticate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabParent" />

    <Button
        android:id="@+id/btnScan"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goScanBT"
        android:text="@string/scan_and_select_reader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAuthenticate" />

    <Button
        android:id="@+id/btnTransRdr"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goPaymentTxn"
        android:text="@string/payment_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScan" />


    <Button
        android:id="@+id/refundBtn"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:onClick="onRefundClicked"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/payment_refund"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTransRdr" />

    <Button
        android:id="@+id/btnLogs"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/transaction_logs"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refundBtn" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/processing_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogs" />

    <TextView
        android:id="@+id/lblProcessingLog"
        android:layout_width="350dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/picture_frame"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btnDeviceConfiguration"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="goToDemoOTA"
        android:text="@string/device_configuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblProcessingLog" />


    <TextView
        android:id="@+id/textView14"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/payrix_copyright"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/lblVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblVersion"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/version_information"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!--
    <RadioGroup
        android:id="@+id/rgPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbSandbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SandBox"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/rbLive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Live - Prod"
            android:textAlignment="textStart" />
    </RadioGroup>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>
